Fix horizontal scrolling.

--- a/kronolith/themes/default/dynamic/screen.css
+++ b/kronolith/themes/default/dynamic/screen.css
@@ -157,9 +157,7 @@ span.kronolithDialogWarning {
 .kronolithDialog select:focus {
     border-color: #d0d0d0;
 }
-.kronolithLongField {
-    width: 100%;
-}
+.kronolithLongField,
 #kronolithEventTitle,
 #kronolithTaskTitle,
 #kronolithCalendarinternalName,
